--- a/Lecture3.Rmd
+++ b/Lecture3.Rmd
@@ -4,14 +4,33 @@ cmd+option+i for new section
 chickwts
 class(chickwts)
 chickwts["weight"]
-dist(mtcars)
-plot(chickwts)
+dist(chickwts$weight)
+plot(chickwts$weight)
 boxplot(chickwts)
 ```
 
 ```{r Single Discrete Variable}
 chickwts['feed']
+unique(chickwts['feed'])
 barplot(matrix(chickwts$feed))
+plot(chickwts['feed'])
+
+```
+
+```{r Two Continuous Variables}
+
+pie(chickwts$weight)
+```
+
+
+```{r One Continuous + One Discrete}
+dotchart(mtcars$mpg,mtcars$wt)
+stripchart(mtcars)
+```
+
+```{r Plotting Time Series}
+
+plot(LakeHuron)
 
 ```
 
